feat: unit tests